@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

' =========================
'  Core types
' =========================
class Candle {
  + timestamp : std::string
  + open : double
  + high : double
  + low : double
  + close : double
  + volume : double
}

enum OrderSide {
  Buy
  Sell
}

class Order {
  + symbol   : std::string
  + side     : OrderSide
  + quantity : int
}

class Position {
  + symbol   : std::string
  + quantity : int
  + avgPrice : double
}

class Portfolio {
  - cash_      : double
  - positions_ : std::unordered_map<std::string, Position>
  + Portfolio(initialCash : double)
  + void applyFill(order : Order, fillPrice : double)
  + int getPositionQty(symbol : std::string) const
  + double getPositionValue(symbol : std::string, lastPrice : double) const
  + double getCash() const
}

' Metrics utility (static functions only)
class Metrics {
  {static} double totalReturn(equityCurve : std::vector<double>)
  {static} double maxDrawdown(equityCurve : std::vector<double>)
  {static} double cagr(equityCurve : std::vector<double>, years : double)
  {static} double sharpe(equityCurve : std::vector<double>)
}

' Forward decl so interfaces can reference it
class BacktestEngine

' =========================
'  Interfaces / abstract roles
' =========================
interface ITradingStrategy {
  + onStart(engine : BacktestEngine)
  + onBar(index : std::size_t, bar : Candle, engine : BacktestEngine)
  + onEnd(engine : BacktestEngine)
}

interface IExecutionEngine {
  + execute(orders : std::vector<Order>, bar : Candle, portfolio : Portfolio &)
}

interface IMarketDataFeed {
  + hasNext() const : bool
  + next() : const Candle &
  + currentIndex() const : std::size_t
}

' =========================
'  Core engine
' =========================
class BacktestEngine {
  - strategy_     : std::unique_ptr<ITradingStrategy>
  - exec_         : std::unique_ptr<IExecutionEngine>
  - feed_         : std::unique_ptr<IMarketDataFeed>
  - portfolio_    : Portfolio
  - equityCurve_  : std::vector<double>
  - symbol_       : std::string
  + BacktestEngine(strategy  : std::unique_ptr<ITradingStrategy>,
                   exec      : std::unique_ptr<IExecutionEngine>,
                   feed      : std::unique_ptr<IMarketDataFeed>,
                   initialCash : double,
                   symbol    : std::string)
  + void run()
  + void placeOrder(order : const Order &)
  + Portfolio & portfolio()
}

' =========================
'  Strategies
' =========================
class SimpleSMAStrategy
class SmaCrossoverStrategy
class RsiReversionStrategy
class BreakoutStrategy
class TrendRsiStrategy

ITradingStrategy <|.. SimpleSMAStrategy
ITradingStrategy <|.. SmaCrossoverStrategy
ITradingStrategy <|.. RsiReversionStrategy
ITradingStrategy <|.. BreakoutStrategy
ITradingStrategy <|.. TrendRsiStrategy

' Each strategy talks back to the engine and portfolio
SimpleSMAStrategy ..> BacktestEngine
SmaCrossoverStrategy ..> BacktestEngine
RsiReversionStrategy ..> BacktestEngine
BreakoutStrategy ..> BacktestEngine
TrendRsiStrategy ..> BacktestEngine

' =========================
'  Execution engine
' =========================
class SimpleExecutionEngine

IExecutionEngine <|.. SimpleExecutionEngine
SimpleExecutionEngine ..> Portfolio
SimpleExecutionEngine ..> Order

' =========================
'  Market data feeds
' =========================
class AlphaVantageFeed
class VectorMarketDataFeed

IMarketDataFeed <|.. AlphaVantageFeed
IMarketDataFeed <|.. VectorMarketDataFeed
AlphaVantageFeed ..> Candle
VectorMarketDataFeed ..> Candle

' =========================
'  Strategy factory
' =========================
class StrategyFactory {
  {static} makeStrategyFromConfig(strategyJson : nlohmann::json,
                                  symbol : std::string) : std::unique_ptr<ITradingStrategy>
}

StrategyFactory ..> ITradingStrategy

' =========================
'  Relationships from engine
' =========================
' Composition: engine owns its Portfolio
BacktestEngine *-- Portfolio

' Aggregation: engine holds strategy / execution / feed via unique_ptr
BacktestEngine o-- ITradingStrategy
BacktestEngine o-- IExecutionEngine
BacktestEngine o-- IMarketDataFeed

' Engine uses Metrics to compute performance
BacktestEngine ..> Metrics

@enduml
